2008-02-12  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add check for LIBSOUNDS. From bug #515956.

2008-02-11  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* NEWS: prepare for 2.21.91.

2008-02-06  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: readd the g-s-d check and remove some more cruft

2008-02-06  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: remove some cruft from the configure script, and give
	libbackground its own settings so we can use it from
	gnome-settings-daemon, too

2008-01-28  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* NEWS: prepare for 2.21.90.

2008-01-25  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Damien Carberry <damien.carberry@sun.com>

	* configure.in: determine correct nautilus extension dir via
	pkgconfig (#505364)

2008-01-16  Rodrigo Moya <rodrigo@gnome-db.org>

	* Makefile.am:
	* configure.in: disabled schemas directory from the build, those
	files are now part of gnome-settings-daemon.

2008-01-14  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* NEWS: prepare for 2.21.5.

	* capplets/common/Makefile.am: fixed CFLAGS and LIBS.

	* capplets/common/activate-settings-daemon.c: include new built
	header file for DBus interface.

	* configure.in: check gnome-settings-daemon.

2008-01-14  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in: disable gnome-settings-daemon build here also.

	* capplets/appearance/Makefile.am:
	* gnome-settings-daemon/Makefile.am:
	* libwindow-settings/Makefile.am:
	* vfs-methods/fontilus/Makefile.am:
	* vfs-methods/themus/Makefile.am: fixes for Cygwin building (#317046)

2008-01-14  Rodrigo Moya <rodrigo@gnome-db.org>

	* capplets/Makefile.am: disabled non-functional l10n capplet.

2008-01-12  Rodrigo Moya <rodrigo@gnome-db.org>

	* Makefile.am: disabled settings daemon build so that the separate
	module gets more testing.

2007-12-22  Luca Ferretti  <elle.uca@libero.it>

	* configure.in: check for eel-2.0, needed by latest libslab.
	See bug #504968.
