@@ -1,3 +1,9 @@
+2008-02-12  Jens Granseuer  <jensgr@gmx.net>
+
+	* e-image-chooser.c: (e_image_chooser_class_init),
+	(image_drag_data_received_cb):
+	* gnome-about-me.c: (about_me_update_preview): port to gio
+
 2007-12-06  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-about-me-password.c: (passdlg_spawn_passwd): add a translation
