@@ -1,3 +1,8 @@
+2008-02-12  Jens Granseuer  <jensgr@gmx.net>
+
+	* configure.in: add gio-2.0 to general capplet flags for now; this
+	part needs cleaning up in the next cycle
+
 2008-02-12  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* configure.in: Add check for LIBSOUNDS. From bug #515956.
